# lkmotor_mf4005_driver

./: CMakeLists.txt  Kconfig  README.rst  west.yml
.github/workflows/: ci.yml
drivers/: lkm_mf4005_motor.c  lkm_mf4005_motor_regs.h  lkm_mf4005_motor_shell.c
dts/bindings/: lkm-mf4005.yml
include/zephyr/drivers/: lkm_mf4005_motor.h
samples/mf4005_shell/: CMakeLists.txt  README.rst  prj.conf
samples/mf4005_shell/boards/: arduino_giga_r1_stm32h747xx_m7.overlay  esp32s3_devkitc_procpu.conf  esp32s3_devkitc_procpu.overlay  nucleo_g474re.overlay
samples/mf4005_shell/src/: main.c
samples/motion_control_playground/: CMakeLists.txt  README.rst  prj.conf
samples/motion_control_playground/boards/: arduino_giga_r1_stm32h747xx_m7.conf  arduino_giga_r1_stm32h747xx_m7.overlay  nucleo_g474re.overlay
samples/motion_control_playground/src/: adrc_control_law.c  adrc_control_law.h  control_law.h  main.c  motor_control_pipeline.c  motor_control_pipeline.h
zephyr/: module.yml
